--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="container">
-    <div ><input class="input-box" type="text"></div>
+    <div ><input placeholder="search" class="input-box" type="text"></div>
     <div class="in"><img class="imag"
       src="img1.png" alt="suma"></div>
     <div class="in"><img class="imag"
