--- a/index.html
+++ b/index.html
@@ -8,19 +8,25 @@
 </head>
 <body>
   <p><input placeholder="search" class="input-box" type="text"></p>
+
   <div class="container">
    
     <div class="in"><img class="imag"
       src="img1.png" alt="suma"></div>
-    <p>hey harish traped a queen</p>
+    
+    <div class="channel-image"><img src="channel-image.png" alt="channel-image"></div>
+    <div class="texts"><p class="parag">hey harish traped a queen </p>
+    </div>
     <p>views</p>
+    
   
   </div>
   <div class="container">
+
    
     <div class="in"><img class="imag"
       src="img1.png" alt="suma"></div>
-    <p>hey harish traped a queen</p>
+    <p>hey harish traped queen</p>
     <p>views</p>
   
   </div>
