--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       src="img1.png" alt="suma"></div>
     
     <div class="channel-image"><img src="channel-image.png" class="channel-img" alt="channel-image"></div>
-    <div class="texts"><p class="parag">hey harish traped a queen </p>
+    <div class="texts"><p class="parag">hey harish traped a Queen </p>
     <p>views</p>
     </div>
     
