worked on flex-box for header design

--- a/index.html
+++ b/index.html
@@ -24,13 +24,19 @@
 
 
     <div class="header">
-      <div class="left-section"></div>
-      <div class="middle-section"></div>
-      <div class="right-section"></div>
+      <div class="left-section">
+        left section
+      </div>
+      <div class="middle-section">
+        <input placeholder="search" class="input-box" type="text">
+      </div>
+      <div class="right-section">
+        right section
+      </div>
 
     </div>
     
-    <input placeholder="search" class="input-box" type="text">
+   
   
   
 
