headers are approx 80% finished and also added new folder for icons

--- a/index.html
+++ b/index.html
@@ -25,10 +25,17 @@
 
     <div class="header">
       <div class="left-section">
-        left section
+        <img class="hamburger-icon" src="icons/hamburger-menu.svg" alt="suma">
+        <img class="youtube-icon" src="icons/youtube-logo.svg" alt="suma">
       </div>
       <div class="middle-section">
         <input placeholder="search" class="input-box" type="text">
+        <button class="search-button">
+          <img src="icons/search.svg" alt="suma">
+        </button>
+        <button class="voice-button">
+          <img src="icons/voice-search-icon.svg" alt="suma">
+        </button>
       </div>
       <div class="right-section">
         right section
