today finished middle section and tomorrow cant be able to finish the right section because oopd exam so tomorrow only 1 commit is possible

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
       <div class="middle-section">
         <input placeholder="search" class="input-box" type="text">
         <button class="search-button">
-          <img src="icons/search.svg" alt="suma">
+          <img class="search-icon"src="icons/search.svg" alt="suma">
         </button>
         <button class="voice-button">
-          <img src="icons/voice-search-icon.svg" alt="suma">
+          <img class="voice-icon" src="icons/voice-search-icon.svg" alt="suma">
         </button>
       </div>
       <div class="right-section">
