--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
         </button>
       </div>
       <div class="right-section">
-        right section
+        <img class="upload-icon" src="icons/upload.svg" alt="suma">
+        <img class="apps-icon"src="icons/youtube-apps.svg" alt="suma">
+        <img class="notification-icon"src="icons/notifications.svg" alt="suma">
+        <img class="profile-icon"src="images/Screenshot 2024-01-03 174440.png" alt="suma">
       </div>
 
     </div>
