--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <link rel="stylesheet" href="header.css">
   <link rel="stylesheet" href="general.css">
   <link rel="stylesheet" href="video.css">
+  <link rel="stylesheet" href="sidebar.css">
+
 
   
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,6 +19,7 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,500;1,100&family=Single+Day&display=swap" rel="stylesheet">
+
 </head>
 
 
@@ -43,6 +46,10 @@
         <img class="notification-icon"src="icons/notifications.svg" alt="suma">
         <img class="profile-icon"src="images/Screenshot 2024-01-03 174440.png" alt="suma">
       </div>
+
+    </div>
+
+    <div class="side-bar">
 
     </div>
     
