added font color and font family

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <img src="images/channel-image.png" class="channel-img" alt="channel-image">
         </div>
         <div class="texts">
-          <p class="parag">Give him a hand shake </p>
+          <div class="parag">Give him a hand shake </div>
           <p>Empty-throne</p>
           <p>165k views . 15 hours ago</p>
         
@@ -90,9 +90,9 @@
           <img src="images/channel-image.png" class="channel-img" alt="channel-image">
         </div>
         <div class="texts">
-          <p class="parag">I gotch yay dude
+          <div class="parag">I gotch yay dude
   
-          </p>
+          </div>
           <p>Empty-throne</p>
   
           <p>165k views.15 hours ago</p>
@@ -114,7 +114,7 @@
           <img src="images/channel-image.png" class="channel-img" alt="channel-image">
         </div>
         <div class="texts">
-          <p class="parag">Feel free to speak </p>
+          <div class="parag">Feel free to speak </div>
           <p>Empty-throne</p>
           <p>165k views . 15 hours ago</p>
         
@@ -137,9 +137,9 @@
           <img src="images/channel-image.png" class="channel-img" alt="channel-image">
         </div>
         <div class="texts">
-          <p class="parag">Can't imagine anything about you
+          <div class="parag">Can't imagine anything about you
   
-          </p>
+          </div>
           <p>Empty-throne</p>
   
           <p>165k views.15 hours ago</p>
@@ -162,9 +162,9 @@
           <img src="images/channel-image.png" class="channel-img" alt="channel-image">
         </div>
         <div class="texts">
-          <p class="parag">Control your emotions
+          <div class="parag">Control your emotions
   
-          </p>
+          </div>
           <p>Empty-throne</p>
   
           <p>165k views.15 hours ago</p>
@@ -187,9 +187,9 @@
           <img src="images/channel-image.png" class="channel-img" alt="channel-image">
         </div>
         <div class="texts">
-          <p class="parag">Always think about good things
+          <div class="parag">Always think about good things
   
-          </p>
+          </div>
           <p>Empty-throne</p>
   
           <p>165k views.15 hours ago</p>
@@ -212,9 +212,9 @@
           <img src="images/channel-image.png" class="channel-img" alt="channel-image">
         </div>
         <div class="texts">
-          <p class="parag">Control your emotions
+          <div class="parag">Control your emotions
   
-          </p>
+          </div>
           <p>Empty-throne</p>
   
           <p>165k views.15 hours ago</p>
@@ -237,9 +237,9 @@
           <img src="images/channel-image.png" class="channel-img" alt="channel-image">
         </div>
         <div class="texts">
-          <p class="parag">Always think about good things
+          <div class="parag">Always think about good things
   
-          </p>
+          </div>
           <p>Empty-throne</p>
   
           <p>165k views.15 hours ago</p>
@@ -262,9 +262,9 @@
           <img src="images/channel-image.png" class="channel-img" alt="channel-image">
         </div>
         <div class="texts">
-          <p class="parag">Control your emotions
+          <div class="parag">Control your emotions
   
-          </p>
+          </div>
           <p>Empty-throne</p>
   
           <p>165k views.15 hours ago</p>
