added new notification number

--- a/index.html
+++ b/index.html
@@ -41,13 +41,20 @@
       <div class="right-section">
         <img class="upload-icon" src="icons/upload.svg" alt="suma">
         <img class="apps-icon"src="icons/youtube-apps.svg" alt="suma">
-        <img class="notification-icon"src="icons/notifications.svg" alt="suma">
+        <div class="notifications-relative">
+          <img class="notification-icon"src="icons/notifications.svg" alt="suma">
+          <div class="notifications-original-number">
+            8
+          </div>
+        </div>
         <img class="profile-icon"src="images/Screenshot 2024-01-03 174440.png" alt="suma">
       </div>
 
     </div>
 
     <div class="side-bar">
+
+
 
     </div>
     
