added new texts

--- a/index.html
+++ b/index.html
@@ -253,12 +253,12 @@
           
         </div>
         <div class="texts">
-          <div class="parag">Always think about good things
+          <div class="parag">Best 7 Goals in Football History
   
           </div>
-          <p>Empty-throne</p>
+          <p>Goal_fall</p>
   
-          <p>165k views.15 hours ago</p>
+          <p>336k views . 2 hours ago</p>
           
         </div>
       </div>
